compiler-tests/src/test/data/diagnostic/inject/assisted/AssistedFactoryMustTargetAssistedInjectTypesButMissingConstructor.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
class ExampleClass

@AssistedFactory
fun interface ExampleClassFactory {
  fun create(count: Int): <!ASSISTED_INJECTION_ERROR!>ExampleClass<!>
}
